--- a/style.css
+++ b/style.css
@@ -1,31 +1,20 @@
-body {
-  color: rgb(31, 13, 32);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 15px;
+.container{
+    margin:auto;
+    padding:10px;
+    border:5px solid rgb(145, 102, 187);
+    width:fit-content;
+    margin-bottom :10px;
+    border-radius: 5px;
+    background-color:wheat;
 }
 
-.heading-container {
-  text-align: center;
-  margin-top: 20px;
-  background: linear-gradient(to bottom, #7b0fe0 0%, #ec09ec 100%);
-}
+   
 
-.main-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: left;
-  gap: 1em;
-  padding: 0.5em;
-  margin: 0 auto;
-  background: linear-gradient(to bottom, #ffe815 0%, #2afc2a 100%);
+.heading-container{
+    text-align: center;
+    padding-bottom: 10px;
+  background-color:paleturquoise;
 }
-
-.container {
-  background-color: #ec09ec;
-  padding: 1px;
-  border-radius: 10px;
-  width: 300px;
-  margin: auto;
-  gap: 1em;
+.main-container{
+    background-color:pink;
 }
